Fix overlap comment pagination

--- a/app/assets/stylesheets/commontator/application.scss
+++ b/app/assets/stylesheets/commontator/application.scss
@@ -128,6 +128,12 @@
   .page-entries-info {
     // margin-left: 75px;
   }
+
+  .will-paginate {
+    .pagination {
+      margin-bottom: 10px !important;
+    }
+  }
 }
 
 .new-comment-reply-wrapper {
